<resources>
    <string name="app_name">My Application</string>
    <string name="cadastro">Cadastro</string>
    <string name="login">Login</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="todo">TODO</string>
    <string name="primeira_foto">1ª Foto</string>
    <string name="segunda_foto">2ª Foto</string>
    <string name="terceira_foto">3ª Foto</string>
    <string name="cadastroTitle">Cadastro</string>
    <string name="descrição_cadastro">Para o cadastro é necessário entrar com um email e três fotos do rosto para o reconhecimento facial.</string>
    <string name="descrição_login">Para o efetuar o login, primeiro entre com seu email e depois tire uma selfie..</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro_email">Para continuar com o reconhecimento facial, será necessário a utilização de um email.</string>
    <string name="continuar">Continuar</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="default_user">User</string>
    <string name="loginTitle">Login</string>
    <string name="ttDescWelcome">Nosso app protege suas informações usando reconhecimento facial! Ainda estamos em desenvolvimento...</string>
    <string name="ttWelcome">Seja bem-vindo(a)!</string>
    <string name="title_first_fragment">é um aplicativo de notas com inteligência artificial</string>
    <string name="title_second_fragment">O aplicativo reconhece sua face e só você pode acessar suas notas</string>
    <string name="button_acess">Acessar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">createNew</string>
    <string name="titulo">Titulo</string>
    <string name="digite_aqui">  Digite aqui.</string>
    <string name="aceitar">aceitar</string>
    <string name="cancelar">cancelar</string>
    <string name="accept_and_create">accept and create</string>
    <string name="cancel">cancel</string>
    <string name="menuCarrosssel">Menu</string>
    <string name="proxCarrosssel">Próximo</string>
    <string name="dicasMenu">Dicas</string>
    <string name="dotted">&#8226;</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>

</resources>