<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tirar_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="127dp" />

    <CheckBox
        android:id="@+id/firstPhoto"
        android:layout_width="127dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:clickable="false"
        android:text="@string/primeira_foto"
        app:layout_constraintBottom_toTopOf="@+id/secondPhoto"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <CheckBox
        android:id="@+id/secondPhoto"
        android:layout_width="127dp"
        android:layout_height="57dp"
        android:layout_marginBottom="20dp"
        android:clickable="false"
        android:text="@string/segunda_foto"
        app:layout_constraintBottom_toTopOf="@+id/thirdPhoro"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <CheckBox
        android:id="@+id/thirdPhoro"
        android:clickable="false"
        android:layout_width="127dp"
        android:layout_height="57dp"
        android:text="@string/terceira_foto"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="63dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastroTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="199dp"
        android:layout_height="74dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/descrição_cadastro"
        app:layout_constraintBottom_toTopOf="@+id/firstPhoto"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btnSend"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTakePicture" />

</androidx.constraintlayout.widget.ConstraintLayout>