<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="codigoFragmento"
            type="br.com.pdm.ui.fragment.CadastroFragment" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bege"
        tools:context="br.com.pdm.ui.fragment.CadastroFragment">

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/tirar_foto"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="73dp" />

        <CheckBox
            android:id="@+id/firstPhoto"
            style="@style/StyleBCheckBox"
            android:layout_width="127dp"
            android:layout_height="57dp"
            android:clickable="false"
            android:text="@string/primeira_foto"
            app:layout_constraintBottom_toTopOf="@+id/secondPhoto"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <CheckBox
            android:id="@+id/secondPhoto"
            style="@style/StyleBCheckBox"
            android:layout_width="127dp"
            android:layout_height="57dp"
            android:clickable="false"
            android:text="@string/segunda_foto"
            app:layout_constraintBottom_toTopOf="@+id/thirdPhoro"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <CheckBox
            android:id="@+id/thirdPhoro"
            style="@style/StyleBCheckBox"
            android:layout_width="127dp"
            android:layout_height="57dp"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:text="@string/terceira_foto"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="35dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/StyleTitulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastroTitle"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <TextView
            android:id="@+id/textView4"
            style="@style/StyleCorpos"
            android:layout_width="212dp"
            android:layout_height="93dp"
            android:layout_marginTop="60dp"
            android:text="@string/descrição_cadastro"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/cadastrar"
            android:onClick="@{codigoFragmento::irCadastroPMain}"
            app:layout_constraintStart_toEndOf="@+id/btnTakePicture"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/textFieldEmail"
            style="@style/StyleBoxes"
            android:layout_width="312dp"
            android:layout_height="42dp"
            android:ems="15"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/firstPhoto"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.481" />

        <EditText
            android:id="@+id/textFieldName"
            style="@style/StyleBoxes"
            android:layout_width="307dp"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textFieldEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

