<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="codigoFragmento"
            type="br.com.pdm.ui.fragment.MainFragment" />
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="br.com.pdm.ui.fragment.MainFragment">

        <Button
            android:id="@+id/btnLogin"
            style="?primaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="@{codigoFragmento::irParaLogin}"
            app:layout_constraintBottom_toTopOf="@+id/btnCadastro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCadastro"
            style="?primaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:text="@string/cadastro"
            android:onClick="@{codigoFragmento::irParaCadastro}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="340dp"
            android:layout_height="311dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_ok" />

        <Button
            android:id="@+id/btInfos"
            style="?primaryButtonStyle"
            android:layout_width="89dp"
            android:layout_height="55dp"
            android:layout_marginStart="144dp"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="12dp"
            android:onClick="@{codigoFragmento::irParaCarrossel}"
            android:text="@string/dicasMenu"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

